--- a/ublox_gps/config/zed_f9p.yaml
+++ b/ublox_gps/config/zed_f9p.yaml
@@ -2,10 +2,12 @@
 ublox_gps_node:
   ros__parameters:
     debug: 0                    # Range 0-4 (0 means no debug statements will print)
-    device: /dev/ttyACM0
+    device: /dev/tty_Ardusimple
     frame_id: gps
     uart1:
-      baudrate: 9600
+      baudrate: 11520
+    config_on_startup: false
+    
     # TMODE3 Config
     tmode3: 1                   # Survey-In Mode
     sv_in:
