--- a/ublox_gps/config/zed_f9p.yaml
+++ b/ublox_gps/config/zed_f9p.yaml
@@ -21,7 +21,7 @@ ublox_gps_node:
       all: true                   # Whether to display all INF messages in console
     
     publish:
-      all: true
+      all: false
       aid:
         hui: false
       nav:
